update user seervice